--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
         href: https://github.com/LiangLai/Lianglai-portfolio   
 format:
   html:
-    theme: cosmo
+    theme: pluse
     highlight: zenburn
     css: styles.css
     toc: FALSE
